--- a/intro-to-html/styles/displayp.css
+++ b/intro-to-html/styles/displayp.css
@@ -1,4 +1,4 @@
-input{
+/*input{
     display: block;
     margin-bottom: 5px;
 }
@@ -24,4 +24,83 @@ img{
     border-radius: 30px;
     border:none;
     box-shadow: 0px 1px 6px rgba(0,0,0,0.2);
+}
+*/
+/*input{
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border-radius: 10px;
+    border-style:solid ;
+    border-width: 1px;
+    font-size: 16px;
+    border-color: rgb(200, 200, 200);
+    margin-bottom:12px;
+}
+.firstName{
+    width: 135px;
+}
+.SecondName{
+    width: 135px;
+}
+.Email{
+    
+    width:305px;
+    display:block;
+}
+.Sign-up{
+    background-color: rgb(47, 127, 231);
+    color: white;
+    width: 340px;
+    font-weight: bold;
+    font-size: 18px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    border-radius: 8px;
+    border: none;
+}
+*/
+input{
+    display:block;
+    margin-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom:15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border:none;
+    background-color: rgb(240,240,240);
+    font-size: 16px;
+    width:400px;
+}
+.uber-font{
+    font-size: 30px;
+    font-family: Arial;
+    margin-bottom: 25px;
+}
+
+.destination{
+    margin-bottom:35px;
+}
+.uber-f{
+    background-color: black;
+    color: white;
+    padding-left: 25px;
+    padding-right:25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: none;
+    font-weight: bold;
+    font-size: 16px;
+    margin-right:20px;
+}
+.uber-s{
+   
+  background-color: rgb(240, 240, 240);
+  border: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  font-size: 16px;
 }
