--- a/intro-to-html/styles/divp.css
+++ b/intro-to-html/styles/divp.css
@@ -86,7 +86,7 @@ p{
     font-family: Arial;
     margin-top: 0;
     margin-bottom: 0;
-}
+}*/
 .div9f{
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
     width: 200px;
@@ -125,7 +125,7 @@ p{
     font-weight: bold;
     margin-left: 8px;
     margin-bottom: 10px;
-}*/
+}/*
 div{
     text-align: center;
 }
@@ -163,4 +163,4 @@ div{
 }
 .text{
     padding-left: 95px;
-}
+}*/
