--- a/youtube.html/styles/header.css
+++ b/youtube.html/styles/header.css
@@ -53,6 +53,38 @@
     margin-left: -1px;
     margin-right: 10px;
 }
+.search-button,
+.voice-search-button,
+.upload-icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.search-button .Tooltip,
+.voice-search-button .Tooltip,
+.upload-icon-container .Tooltip{
+   
+    position: absolute;
+    background-color: gray;
+    color: white;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 2px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity:0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+.search-button:hover .Tooltip,
+.voice-search-button:hover .Tooltip,
+.upload-icon-container:hover .Tooltip{
+    opacity: 1;
+}
 .voice-search-button{
     height: 40px;
     width: 40px;
@@ -65,25 +97,20 @@
     height: 36px;
     padding-left: 10px;
     font: 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(192, 192, 192);
+    border:1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
     width: 0;
 }
 .search-bar::placeholder{
-    font-family: Roboto,Arial;
     font-size: 16px;
 }
 
 .search-icon{
     height: 25px;
-    margin-top: 4px;
 }
 .voice-search-icon{
     height: 20px;
-    margin-top: 4px;
    
 }
 .upload-icon{
@@ -104,7 +131,6 @@
     right:-5px;
     background-color: rgb(200,0,0);
     color: white;
-    font-family: Roboto,Arial;
     font-size: 11px;
     padding-left: 5px;
     padding-right:5px;
