--- a/youtube.html/styles/sidebar.css
+++ b/youtube.html/styles/sidebar.css
@@ -5,4 +5,26 @@
     top: 55px;
     background-color: white;
     width:72px;
+    z-index:200;
+    padding-top: 5px;
+    cursor: pointer;
+}
+.Sidebar-link{
+    height:74px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.Sidebar-link:hover{
+    background-color: rgb(235, 235, 235);
+}
+
+.Sidebar-link img {
+    height:24px;
+    margin-bottom: 4px;
+    
+}
+.Sidebar-link div{
+    font-size: 10px;
 }
